[tool.poetry]
name = "dresdentermin"
version = "0.1.0"
description = "Notify when there are new free appointments for Dresden Bürgeramt"
authors = ["Benno Fünfstück <benno.fuenfstueck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dresdentermin = "dresdentermin.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
